@@ -1,3 +1,7 @@
+2009-03-08  Andreas Kirschbaum
+
+	* Save shortcuts per character.
+
 2009-02-22  Andreas Kirschbaum
 
 	* Fix shortcuts loader for commands.
